--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,20 @@ URL: https://github.com/chguiterman/rIMPD
 BugReports: https://github.com/chguiterman/rIMPD/issues
 License: AGPL-3
 Suggests:
-    testthat
+    testthat,
+    knitr,
+    rmarkdown
+Imports:
+    dplyr,
+    magrittr,
+    glue,
+    rlang,
+    httr,
+    jsonlite,
+    purrr,
+    lubridate,
+    tidyr,
+    stringr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
