--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 export(build_impd_meta)
 export(get_impd_fhx)
-export(search_ncei_paleo_api)
+export(ncei_paleo_api)
 importFrom(burnr,read_fhx)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
