--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(build_impd_meta)
 export(get_impd_fhx)
+export(get_search_params)
 export(ncei_paleo_api)
 importFrom(burnr,read_fhx)
 importFrom(dplyr,group_by)
@@ -24,6 +25,7 @@ importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,pluck)
+importFrom(readr,read_delim)
 importFrom(rlang,.data)
 importFrom(rlang,abort)
 importFrom(stringr,str_c)
