new wrapper function to search the impd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(build_impd_meta)
 export(get_impd_fhx)
 export(get_search_params)
 export(ncei_paleo_api)
+export(search_impd)
 importFrom(burnr,read_fhx)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
