--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,9 +26,11 @@ importFrom(purrr,map)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
 importFrom(purrr,pluck)
-importFrom(readr,read_delim)
 importFrom(rlang,.data)
 importFrom(rlang,abort)
+importFrom(stats,setNames)
 importFrom(stringr,str_c)
 importFrom(stringr,str_glue)
+importFrom(stringr,str_split)
+importFrom(tibble,as_tibble)
 importFrom(tidyr,unnest)
