--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_search_params)
 export(ncei_paleo_api)
 export(search_impd)
 importFrom(burnr,read_fhx)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
@@ -30,6 +31,7 @@ importFrom(rlang,.data)
 importFrom(rlang,abort)
 importFrom(stats,setNames)
 importFrom(stringr,str_c)
+importFrom(stringr,str_detect)
 importFrom(stringr,str_glue)
 importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
