--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ importFrom(httr,build_url)
 importFrom(httr,content)
 importFrom(httr,http_type)
 importFrom(httr,parse_url)
+importFrom(httr,status_code)
+importFrom(httr,stop_for_status)
 importFrom(httr,user_agent)
 importFrom(jsonlite,fromJSON)
 importFrom(lubridate,year)
